# CodexBrowserRelay

./: .gitignore  README.md  install.cmd  install.ps1
extension/: PROTOCOL.md  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
extension/tools/: generate-icons.ps1
relay-service/: README.md  manage-relay.bat  package-lock.json  package.json  run-relay-service.cmd  run-relay-service.vbs
relay-service-py/: README-INSTALL.md  README.md  pyproject.toml
relay-service-py/codex_browser_relay_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
relay-service-py/relay/: __init__.py  __main__.py  server.py  service.py
relay-service-py/scripts/: install-python-relay.ps1  install-windows-service.ps1  remove-windows-service.ps1
relay-service/scripts/: install-local-service.ps1  remove-local-service.ps1
relay-service/src/: cli.js  relay-server.js
relay-service/tests/: relay-server.test.js
skill/codex-browser-relay/: SKILL.md
skill/codex-browser-relay/scripts/: advance_udemy.ps1  capture_page.ps1  list_pages.ps1  page_command.ps1
